tests/compile_errors/026-out-last-statement.buzz
// Last block expression statement must be `out`
test "out must be last statement" {
    from {
        out "i should be last";

        "hello world";
    };
}